welcome.lessons.welcome.bat.bool2.DateFashion.scala.error
dateFashion:2: error: ')' expected but integer literal found.
  if (you>=8 && || date>=8){
                         ^dateFashion:9: error: illegal start of simple expression
} 
^